--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,5 +23,6 @@ version = "0.1.0"
 requires-python = ">=3.13"
 dependencies = [
     "mkdocs>=1.6.1",
+    "mkdocs-macros-plugin>=1.3.7",
     "mkdocs-material[git,recommended]>=9.6.6",
 ]
