Add more information about translations

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,5 +41,6 @@ markdown_extensions:
   - admonition
   - footnotes
   - pymdownx.highlight
+  - pymdownx.keys
   - pymdownx.superfences
   - pymdownx.tasklist
