--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,7 +32,7 @@ theme:
 nav:
   - Home: index.md
   - Development:
-      - Source code: source.md
+      - Source code: source-code.md
       - Translations: translations.md
       - Release process: release-process.md
 
