Add a document on communication

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ theme:
 
 nav:
   - Home: index.md
+  - Communication: communication.md
   - Development:
       - Source code: source-code.md
       - Coding style: coding-style.md
