--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,8 @@ repo_url: https://github.com/MidnightCommander/mc/
 
 extra:
   mirror_url: https://repo.or.cz/midnight-commander.git
+  downloads_url: https://ftp.osuosl.org/pub/midnightcommander
+  organization_url: https://github.com/MidnightCommander
 
 copyright: Copyright &copy; 2025 <a href="https://www.linkedin.com/in/yuryzaytsev/">Yury V. Zaytsev</a>
 
