--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ repo_name: MidnightCommander/mc
 repo_url: https://github.com/MidnightCommander/mc
 
 extra:
+  source_url: https://source.midnight-commander.org
   mirror_url: https://repo.or.cz/midnight-commander.git
   downloads_url: https://ftp.osuosl.org/pub/midnightcommander
   organization_url: https://github.com/MidnightCommander
