--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,4 +25,5 @@ dependencies = [
     "mkdocs>=1.6.1",
     "mkdocs-macros-plugin>=1.3.7",
     "mkdocs-material[git,recommended]>=9.6.6",
+    "mkdocs-redirects>=1.2.2",
 ]
