Add other resources with links to forks and archives

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ nav:
   - Home: index.md
   - Maintainers: maintainers.md
   - Communication: communication.md
+  - Other resources: other.md
   - Development:
       - Source code: source-code.md
       - Coding style: coding-style.md
