Toggle `site_url` to point to `midnight-commander.org`

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Midnight Commander
-site_url: https://new.midnight-commander.org
+site_url: https://midnight-commander.org
 site_description: Midnight Commander Development Center
 
 repo_name: MidnightCommander/mc
