--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ repo_name: MidnightCommander/mc
 repo_url: https://github.com/MidnightCommander/mc
 
 extra:
-  downloads_url: https://ftp.osuosl.org/pub/midnightcommander
+  downloads_url: https://ftp.osuosl.org/pub/midnightcommander/?C=N;O=D
   man_url: https://source.midnight-commander.org/man
   mirror_url: https://repo.or.cz/midnight-commander.git
   organization_url: https://github.com/MidnightCommander
